--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,11 +16,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag bear_build:latest
-    - name: Install staging
-      run: docker run -it --rm -v $(pwd)/stage:/home/build/stage bear_build:latest make install
-    - name: Package
-      run: tar -czvf bear.tar.gz -C stage *
+    - name: Create container
+      run: docker create --name bear_build_extract bear_build:latest
+    - name: Copy artifacts
+      run: docker cp bear_build_extract:/home/build/packages .
+    - name: Remove container
+      run: docker rm bear_build_extract
     - uses: actions/upload-artifact@v2
       with:
-        name: bear_snapshot
-        path: bear.tar.gz
+        name: bear-SNAPSHOT
+        path: packages/*
